working on js portion, gets really confusing at times

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -19,7 +19,7 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  < class="container">
+  <div class="container">
     <!-- Timeblocks go here -->
     <div class="row timw-block" data-hour="9">
       <div class="col-2 col-lg-1 hour">9 am</div>
@@ -76,6 +76,7 @@
       <button class="col-2 col-lg-1 btn btn-block saveBtn d-flex justify-content-center align-items-center" <i
         class="fas fa-save"></i>
     </div>
+  </div>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
